Bug 153376 - Too Much Line Spacing for Font KJV1611
Summary: Too Much Line Spacing for Font KJV1611
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.3 release
Hardware: All All
: medium normal
Assignee: Khaled Hosny
URL:
Whiteboard: target:7.6.0 target:7.5.1
Keywords: regression
Depends on:
Blocks: Font-Rendering
  Show dependency treegraph
 
Reported: 2023-02-04 16:52 UTC by zaakari
Modified: 2023-03-04 14:04 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description zaakari 2023-02-04 16:52:24 UTC
Description:
I just updated LibreOffice to version 7.5.0.3 (from whatever the previous version was, I don't remember). Previously, the font KJV1611 (by ctrlcctrlv, downloadable on his github page here: https://github.com/ctrlcctrlv/kjv1611) displayed without any problems; but since the update, LibreOffice now displays the font with what looks like double line spacing (even though single line spacing is selected in the paragraph format). It seems as though LibreOffice has started thinking the characters in the font are way larger than they actually are, as when you place the cursor on a line, it far exceeds the height of any of the characters that you type.

I have not noticed this problem with any other font as of yet. And the only way around it seems to be to use a fixed or proportianl line spacing (with lowered values), but I cannot achieve the accurate (original) line spacing with either of those methods, and they each present other issues (fixed doesn't scale with font size, and proportional doesn't seem to work well with drop caps).

Currently, this formatting (or viewing?) issue ruins the documents I have been working on. It could be that the issue lies with the font, but I don't see how, as it hasn't changed in a couple of years, and was working just fine up till now.

Steps to Reproduce:
1.Install the KJV1611 font (https://github.com/ctrlcctrlv/kjv1611/raw/master/KJV1611.otf)
2.Open LibreOffice Writer and switch font to KJV1611
3.Type a couple of lines of text

Actual Results:
Large amounts of space are placed between lines. The cursor on a line is way bigger than the text on the same line.

Expected Results:
The KJV1611 font ought to display with regular spacing between lines (as other fonts). Perceived height (cursor height) ought to match actual height (character height).


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 7.5.0.3 (X86_64) / LibreOffice Community
Build ID: 50(Build:3)
CPU threads: 16; OS: Linux 6.1; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-CA (en_CA.UTF-8); UI: en-US
7.5.0-1
Calc: CL threaded
Comment 1 Commit Notification 2023-02-07 18:36:01 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ad5005c3bfb6105e92e52111c3093312a6cb8ff2

tdf#153376: Fix reading USE_TYPO_METRICS flag

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2023-02-07 20:11:11 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/d955b1916d12ea6648a17f109a4d717f4bd94c0f

tdf#153376: Fix reading USE_TYPO_METRICS flag

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 zaakari 2023-03-04 14:04:45 UTC
I confirm this is fixed in 7.5.1.

Thank you kindly.