tdf#153376: Fix reading USE_TYPO_METRICS flag

Font data is big endian while SvStream defaults to little endian.

Regression from:

commit fb417ee082afdd2e80a1f48aa420bb8d5cb97686
Author: Khaled Hosny <khaled@aliftype.com>
Date:   Fri Sep 30 12:35:10 2022 +0200

    vcl: Apply variations to font metrics

Change-Id: I474ec2a76057baca93f350e23c3779985abdf9da
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146611
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@aliftype.com>